[package]
name = "track_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version="3"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
toml = "0.5.9"
log = "0.4.6"
env_logger ={version="0.9.0"}
chrono = {version="0.4.19", features = ["serde"]}
csv = "1"
imageproc = "0.23.0"
image = "0.24.2"
rusttype = "0.9.2"
